--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <form action="/checkout" method="post">
   <label>Type data here: </label>
-  <input type="text" name="data[type1]">
+  <input type="text" name="item[type1]">
   <label>Type another data here: </label>
-  <input type="text" name="data[type2]">
+  <input type="text" name="item[type2]">
 </form>
