Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,4 +3,5 @@
   <input type="text" name="item[type1]">
   <label>Type another data here: </label>
   <input type="text" name="item[type2]">
+  <input type="submit" value="Submit">
 </form>
